# ecological-inference

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MIGRATION_NOTES.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  python-package-makefile.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: model_eval_and_comparison_demo.ipynb  santa_clara_demo.ipynb  santa_clara_demo_r_by_c.ipynb
intro_notebooks/: Introduction_to_EI.ipynb  Plotting_with_PyEI.ipynb  PyEI_overview.ipynb
pyei/: data.py  distribution_utils.py  goodmans_er.py  greiner_quinn_gibbs_sampling.py  plot_utils.py  r_by_c.py  r_by_c_models.py  two_by_two.py
test/: test_greiner_quinn.py  test_two_by_two.py
