[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyei"
version = "1.1.4"
description = "A package for rpv and ecological inference"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Metric Geometry and Gerrymandering Group"}
]
license = {file = "LICENSE"}
keywords = ["ecological inference", "statistics", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
    # Core scientific computing
    "numpy==2.2.6",
    "scipy==1.15.3",
    "pandas==2.3.2",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
    
    # Machine learning
    "scikit-learn==1.7.2",
    
    # Bayesian inference and probabilistic programming
    "pymc==5.25.1",
    "arviz==0.22.0",
    "pytensor==2.31.7",
    
    # JAX ecosystem for high-performance computing
    "jax==0.6.2",
    "jaxlib==0.6.2",
    "numpyro==0.19.0",
    
    # Numerical computation acceleration
    "numba==0.61.2",
    
    # Data I/O and visualization
    "netCDF4==1.7.2",
    "h5netcdf==1.6.4",
    "h5py==3.14.0",
    "xarray==2025.6.1",
    "xarray-einstats==0.8.0",
    "graphviz==0.21",
    
    # Utilities
    "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/mggg/ecological-inference"
Repository = "https://github.com/mggg/ecological-inference"
Issues = "https://github.com/mggg/ecological-inference/issues"

[project.optional-dependencies]
dev = [
    # Code quality and linting
    "ruff==0.12.12",
    "mypy==1.17.1",
    
    # Testing framework
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    
    # Development tools
    "pre-commit==4.3.0",
    
    # Jupyter notebook support
    "jupyter==1.1.1",
    "ipykernel",
    "ipywidgets==8.1.5",
]

docs = [
    # Documentation tools
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "sphinx-autodoc-typehints",
]

[tool.hatch.build.targets.wheel]
packages = ["pyei"]

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN101", # missing type annotation for `self` in method
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "B905",   # won't work on python <3.10
  "D417",   # Missing argument descriptions docstring for `__init__`: `**kwargs`, `*args`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*.py" = [
  "S101",   # Use of assert
]